--- a/src/main/resources/static/css/pages/_findId.scss
+++ b/src/main/resources/static/css/pages/_findId.scss
@@ -82,6 +82,7 @@
                         height: 29px;
                         padding: 2px 4px;
                         border: 1px solid #d5d5d5;
+                        width: 200px;
                     }
 
                     input:focus::placeholder {
