--- a/src/main/resources/static/css/scss/default.scss
+++ b/src/main/resources/static/css/scss/default.scss
@@ -11,6 +11,9 @@
 @import 'layout/navigation';
 @import 'layout/footer';
 
+// modules
+@import 'modules/pagination';
+
 // pages
 @import 'pages/board';
 @import 'pages/cart';
