--- a/src/main/resources/static/css/css/admin.css
+++ b/src/main/resources/static/css/css/admin.css
@@ -173,6 +173,64 @@ footer .footer_copyright {
   text-align: center;
 }
 
+.pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.pagination ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 20px;
+  line-height: 50px;
+  font-size: 13px;
+}
+.pagination ul li {
+  margin: 0 15px;
+}
+.pagination ul li a {
+  color: #999;
+}
+.pagination ul li.disabled {
+  pointer-events: none;
+}
+.pagination ul .page {
+  text-align: center;
+}
+.pagination ul .page:hover a {
+  color: #000;
+  font-weight: bold;
+}
+.pagination ul .page.active a {
+  color: #000;
+  font-weight: bold;
+  text-decoration-line: underline;
+}
+.pagination ul .prev,
+.pagination ul .next {
+  color: rgb(50, 50, 50);
+  font-size: 13px;
+}
+.pagination ul .prev {
+  margin-right: 20px;
+}
+.pagination ul .next {
+  margin-left: 20px;
+}
+
 /* signUp page start */
 .add_item_header {
   margin: 0px auto 60px;
@@ -400,63 +458,6 @@ footer .footer_copyright {
 .item_mng_body form table tbody tr td:nth-child(2) {
   text-align: left;
 }
-.item_mng_body .pagination {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.item_mng_body .pagination ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px 20px;
-  line-height: 50px;
-  font-size: 13px;
-}
-.item_mng_body .pagination ul li {
-  margin: 0 15px;
-}
-.item_mng_body .pagination ul li a {
-  color: #999;
-}
-.item_mng_body .pagination ul li.disabled {
-  pointer-events: none;
-}
-.item_mng_body .pagination ul .page {
-  text-align: center;
-}
-.item_mng_body .pagination ul .page:hover a {
-  color: #000;
-  font-weight: bold;
-}
-.item_mng_body .pagination ul .page.active a {
-  color: #000;
-  font-weight: bold;
-  text-decoration-line: underline;
-}
-.item_mng_body .pagination ul .prev,
-.item_mng_body .pagination ul .next {
-  color: rgb(50, 50, 50);
-  font-size: 13px;
-}
-.item_mng_body .pagination ul .prev {
-  margin-right: 20px;
-}
-.item_mng_body .pagination ul .next {
-  margin-left: 20px;
-}
 .item_mng_body .search_box {
   margin-top: 40px;
   display: -webkit-box;
@@ -500,6 +501,106 @@ footer .footer_copyright {
   opacity: 0;
 }
 .item_mng_body .search_box input:focus::placeholder {
+  opacity: 0;
+}
+
+.order_mng_header {
+  margin: 0px auto 60px;
+}
+.order_mng_header h2 {
+  font-size: 15px;
+  text-align: center;
+}
+.order_mng_header .divider {
+  width: 70px;
+  height: 1px;
+  background: #aaa;
+  margin: 20px auto;
+}
+
+.order_mng_body {
+  margin: 0 auto;
+}
+.order_mng_body form table {
+  font-size: 12px;
+}
+.order_mng_body form table thead th {
+  padding: 15px 0 14px;
+  border-bottom: 1px solid #e5e5e5;
+  color: #353535;
+  vertical-align: middle;
+  font-weight: normal;
+  background: #fff;
+  text-align: center;
+}
+.order_mng_body form table tbody {
+  vertical-align: middle;
+  text-align: center;
+}
+.order_mng_body form table tbody tr td {
+  padding: 15px 5px 14px;
+  border-top: 1px solid #e5e5e5;
+  color: #353535;
+  height: 80px;
+}
+.order_mng_body form table tbody tr td a {
+  width: 90px;
+  margin: 1px 0;
+}
+.order_mng_body form table tbody tr td a:hover {
+  text-decoration: underline;
+  color: rgb(107, 107, 107);
+}
+.order_mng_body form table tbody tr td button {
+  font-size: 12px !important;
+  padding: 0 !important;
+}
+.order_mng_body form table tbody tr td.left {
+  text-align: left;
+}
+.order_mng_body .search_box {
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.order_mng_body .search_box select {
+  border: 1px solid #d3d3d3;
+  font-size: 12px;
+  margin-right: 2px;
+  height: 40px;
+}
+.order_mng_body .search_box input {
+  width: 240px;
+  border: none;
+  height: 40px;
+  border: 1px solid #d3d3d3;
+  padding-left: 10px;
+  font-size: 12px;
+  margin-right: 2px;
+}
+.order_mng_body .search_box input:focus {
+  outline: none;
+}
+.order_mng_body .search_box input:focus::-webkit-input-placeholder {
+  opacity: 0;
+}
+.order_mng_body .search_box input:focus::-moz-placeholder {
+  opacity: 0;
+}
+.order_mng_body .search_box input:focus:-ms-input-placeholder {
+  opacity: 0;
+}
+.order_mng_body .search_box input:focus::-ms-input-placeholder {
+  opacity: 0;
+}
+.order_mng_body .search_box input:focus::placeholder {
   opacity: 0;
 }
 
